fix: Update .gitignore to include additional files and directories

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ data/
 *.log
 # Environment variables
 .venv
+project_report.md
+project_report.pdf
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+# Pytest cache  
+.cache/
+# Coverage reports
+.coverage
