--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@ data/
 *.log
 # Environment variables
 .venv
+project_report.pdf
+project_report.md
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+# Pytest cache     
+.pytest_cache/
+# Coverage reports
+.coverage
